	- Fix typo's in configure.in that relate to the errors generated
	  when a discontinued configure option is used
	- Fix bug when autocreating a user dir for a user who exists
	  in the auth backend, but does not yet have a user dir 
	  allocated. [873007] 
	- Fix bug introduced in vpopmail-5.4.0-pre2 that was preventing
	  ~vpopmail/etc/vpopmail.mysql from being installed [874776]

	Ken Nonaka
	- Fixes to vpgsql.c to clear compile errors when 
	  --enable-ip-alias-domains is enabled. [874066] 

	Tom Collins
	- Check for comments earlier in deliver_mail().
	- Remove unused --enable-defaultquota and code related to it.
	  (Replaced by settings in vlimits.default.)
	- Remove references to --eanble-defaultquota in documentation.
	- vdelivermail.c: Consistent return values in deliver_mail().

5.4.0-rc1 - released 1-Jan-04

	Michael Bowe
	- Code fixes and documentation work for LDAP module. 
	  Incl updated README.ldap, vldap.c, vldap.h, ldap/slapd.conf, 
	  ldap/vpopmail.ldif. [863881] [811000] [864643]
	- Rewrote the README.mysql based on my web based guide.
	- Documentation tweaks for README.pgsql, README.roamingusers.

	Tom Collins
	- Remove unused var (cp), change random/srandom to rand/srand in
	  vpopmail.c to remove compiler warnings.
	- Fix Makefile to use correct owner/group/permissions for 
	  install-strip.
	- Fix configure to indicate that --enable-auth-logging is default.
 
5.4.0-pre2 - released 21-Dec-03

	*** Note that the configure option for setting the authentication
	*** module has changed.  Instead of --enable-mysql, use
	*** --enable-auth-module=mysql.

	Casey Zacek
	- Keep vlimits_setflags() in vlimits.c when mysql-limits is
	  enabled. [858109]
	- Create maildirsize file when adding new user. [858994]

	Tom Collins
	- open_smtp_relay(): fix address conversion of '::ffff:127.0.0.1'
	  ip format, move code to function and replace calls to
	  getenv("TCPREMOTEIP"). [858586]
	- When optimizing adddomain, rebuild users/cdb after each addition